refactor(sequence): reorganize package structure for sequence-related classes